--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
-    "passport": "^0.4.0"
+    "express-session": "^1.15.6",
+    "mongoose": "^4.13.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1"
   }
 }
