--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Advancedproject5",
+  "name": "Advancedproject6",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -13,8 +13,6 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mongoose": "^4.13.2",
-    "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1"
+    "mongoose": "^4.13.2"
   }
 }
